Use weekly outlook to recommend filling ahead of later rises
